--- a/.gitattributes
+++ b/.gitattributes
@@ -67,3 +67,4 @@
 *.avi filter=lfs diff=lfs merge=lfs -text
 *.lwo filter=lfs diff=lfs merge=lfs -text
 *.FBX filter=lfs diff=lfs merge=lfs -text
+*.unity3d filter=lfs diff=lfs merge=lfs -text
